# GNN_HIV_Challenge

./: .gitignore  README.md  index.html  leaderboard.csv  leaderboard.html  leaderboard.md  pyproject.toml  requirements.txt
.github/workflows/: score_submission.yml
scoring/: generate_html_leaderboard.py  scoring_script.py  update_leaderboard.py
scripts/: download_private_data.py
starter_code/: baseline.py  data_loader.py  gnn_models.py  train.py
submissions/: default.csv  ogb_submission_gat.csv  ogb_submission_gcn.csv  ogb_submission_gcns.csv  ogb_submission_gin.csv
