[project]
name = "molecular-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "ogb>=1.3.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
    "torchmetrics>=1.8.2",
    "warpt>=0.1.0",
]
